--- a/.github/workflows/run_smart_accounts.yml
+++ b/.github/workflows/run_smart_accounts.yml
@@ -16,6 +16,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Set up Node.js
+      working-directory: ./smart_accounts
       uses: actions/setup-node@v3
       with:
         node-version: '20'
