--- a/.github/workflows/run_smart_accounts.yml
+++ b/.github/workflows/run_smart_accounts.yml
@@ -23,8 +23,11 @@ jobs:
       with:
         node-version: '20'
     
+    - name: PWD
+      run: pwd
+    
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     
     - name: Build TypeScript
       run: npm run build
