--- a/wallet/package.json
+++ b/wallet/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@compass-labs/api-sdk": "^0.5.1",
+    "dotenv": "^16.5.0",
+    "ethers": "^6.14.3",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
