--- a/smart_accounts_zerodev/package.json
+++ b/smart_accounts_zerodev/package.json
@@ -11,7 +11,7 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
-		"@compass-labs/api-sdk": "^0.5.1",
+		"@compass-labs/api-sdk": "latest",
 		"@zerodev/ecdsa-validator": "^5.4.9",
 		"@zerodev/sdk": "^5.4.36",
 		"dotenv": "^16.5.0",
