--- a/smart_accounts_safe/package.json
+++ b/smart_accounts_safe/package.json
@@ -6,6 +6,7 @@
         "build": "tsc",
         "start": "node dist/index.js"
     },
+    "type": "module",
     "keywords": [],
     "author": "",
     "license": "ISC",
@@ -13,11 +14,13 @@
     "devDependencies": {
         "@types/node": "^22.15.29",
         "prettier": "^3.5.3",
+        "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
     },
     "dependencies": {
         "@compass-labs/api-sdk": "^0.5.5",
         "@safe-global/sdk-starter-kit": "^2.0.2",
-        "dotenv": "^16.5.0"
+        "dotenv": "^16.5.0",
+        "tslib": "^2.8.1"
     }
 }
