trying protocol kit

--- a/smart_accounts_safe/package.json
+++ b/smart_accounts_safe/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@compass-labs/api-sdk": "^0.5.5",
+        "@safe-global/protocol-kit": "^6.0.4",
         "@safe-global/sdk-starter-kit": "^2.0.2",
         "dotenv": "^16.5.0",
         "tslib": "^2.8.1"
