--- a/aave_looping/typescript_example/package.json
+++ b/aave_looping/typescript_example/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "dev": "ts-node --esm src/index.ts"
   },
   "keywords": [],
   "author": "",
