--- a/smart_accounts/safe/package.json
+++ b/smart_accounts/safe/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "tsc",
+        "build": "node --loader ts-node/esm ./src/index.ts",
         "start": "node dist/index.js"
     },
     "type": "module",
