--- a/smart_accounts/zerodev/package.json
+++ b/smart_accounts/zerodev/package.json
@@ -4,19 +4,17 @@
 	"main": "dist/index.js",
 	"type": "module",
 	"scripts": {
-		"build": "tsc",
-		"start": "node dist/index.js"
+		"start": "node --loader ts-node/esm ./src/index.ts"
 	},
 	"author": "",
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
 		"@compass-labs/api-sdk": "latest",
-		"@zerodev/ecdsa-validator": "^5.4.9",
-		"@zerodev/sdk": "^5.4.36",
+		"@zerodev/ecdsa-validator": "latest",
+		"@zerodev/sdk": "latest",
 		"dotenv": "^16.5.0",
-		"tslib": "^2.8.1",
-		"viem": "^2.30.5"
+		"tslib": "^2.8.1"
 	},
 	"devDependencies": {
 		"@types/node": "^22.15.27",
