--- a/smart_accounts/safe/package.json
+++ b/smart_accounts/safe/package.json
@@ -3,8 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "node --loader ts-node/esm ./src/index.ts",
-        "start": "node dist/index.js"
+        "start": "node --loader ts-node/esm ./src/index.ts"
     },
     "type": "module",
     "keywords": [],
