--- a/api_reference/python_sdk_snippets/pyproject.toml
+++ b/api_reference/python_sdk_snippets/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "vault-rebalance"
+name = "python_sdk_snippets"
 version = "0.1.0"
-description = "Rebalance vault positions using the Compass API"
+description = "all the snippets involving the python sdk from the api reference"
 requires-python = ">=3.13"
 dependencies = [
     "compass-api-sdk>=0.3.8",
