--- a/.github/workflows/api_reference_python_sdk_snippets.yml
+++ b/.github/workflows/api_reference_python_sdk_snippets.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Run snippets
       working-directory: api_reference/python_sdk_snippets
-      run: make test-snippet API_KEY=${{ secrets.COMPASS_API_KEY }}
+      run: make test-snippets API_KEY=${{ secrets.COMPASS_API_KEY }}
 
 #    - name: Run snippets
 #      if: ${{ github.event_name != 'workflow_dispatch' || inputs.skip_tests == false }}
