--- a/vault_rebalance/pyproject.toml
+++ b/vault_rebalance/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Rebalance vault positions using the Compass API"
 requires-python = ">=3.13"
 dependencies = [
-    "compass-api-sdk>=0.3.8",
+    "compass-api-sdk",
     "dotenv>=0.9.9",
     "plotly>=6.1.0",
     "ruff>=0.11.10",
