--- a/transaction_bundling/generic/typescript_example/package.json
+++ b/transaction_bundling/generic/typescript_example/package.json
@@ -15,7 +15,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@compass-labs/api-sdk": "latest",
+    "@compass-labs/api-sdk": "^0.5.20",
     "dotenv": "^16.5.0",
     "viem": "^2.31.2"
   }
