--- a/gas_estimation/pyproject.toml
+++ b/gas_estimation/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "vault-rebalance"
+name = "gas-estimation"
 version = "0.1.0"
-description = "Rebalance vault positions using the Compass API"
+description = "gas estimation: aave looping with and without multicall"
 requires-python = ">=3.13"
 dependencies = [
     "compass-api-sdk>=0.9.22",
