--- a/compass_agent/pyproject.toml
+++ b/compass_agent/pyproject.toml
@@ -8,9 +8,10 @@ dependencies = [
     "devtools>=0.12.2",
     "fastapi>=0.115.8",
     "jsonref>=1.1.0",
-    "langchain>=0.3.17",
+    "langchain",
     "langchain-community>=0.3.16",
-    "langchain-compass",
+    "langchain-compass>=0.3.7",
+    "langgraph",
     "langchain-ollama>=0.2.3",
     "notebook>=7.3.2",
     "prompt-toolkit>=3.0.50",
