--- a/gas_estimation/pyproject.toml
+++ b/gas_estimation/pyproject.toml
@@ -5,8 +5,10 @@ description = "gas estimation: aave looping with and without multicall"
 requires-python = ">=3.13"
 dependencies = [
     "compass-api-sdk>=0.9.25",
+    "devtools>=0.12.2",
     "dotenv>=0.9.9",
     "plotly>=6.1.0",
+    "rich>=14.0.0",
     "ruff>=0.11.10",
     "streamlit>=1.45.1",
     "web3>=7.11.1",
