--- a/vault_rebalance/package.json
+++ b/vault_rebalance/package.json
@@ -10,16 +10,19 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "@compass-labs/api-sdk": "^0.5.26",
+        "@compass-labs/api-sdk": "^0.5.29",
         "@radix-ui/react-slot": "^1.1.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "dotenv": "^16.5.0",
+        "ethers": "^6.14.4",
         "lucide-react": "^0.438.0",
         "next": "14.2.23",
         "react": "^18",
         "react-dom": "^18",
         "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "viem": "^2.31.4"
     },
     "devDependencies": {
         "@types/node": "^20",
