--- a/gas_estimation/pyproject.toml
+++ b/gas_estimation/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 description = "gas estimation: aave looping with and without multicall"
 requires-python = ">=3.13"
 dependencies = [
-    "compass-api-sdk>=0.9.36",
+    "compass-api-sdk>=0.9.37",
+    "devtools>=0.12.2",
     "dotenv>=0.9.9",
     "plotly>=6.1.0",
     "ruff>=0.11.10",
