--- a/privy_example/package.json
+++ b/privy_example/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@compass-labs/api-sdk": "^1.0.2",
+    "@compass-labs/api-sdk": "0.5.59",
     "@privy-io/react-auth": "^2.21.1",
     "@privy-io/server-auth": "^1.30.0",
     "next": "15.1.3",
