--- a/privy_example/package.json
+++ b/privy_example/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aa-sdk/core": "^4.53.1",
+    "@account-kit/infra": "^4.53.1",
+    "@account-kit/react": "^4.53.1",
+    "@account-kit/smart-contracts": "^4.53.1",
     "@compass-labs/api-sdk": "0.5.59",
     "@privy-io/react-auth": "^2.21.1",
-    "@privy-io/server-auth": "^1.30.0",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.29.2"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
