--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -1,4 +1,4 @@
-name: test_usecases
+name: test_usecases_v1
 
 on:
   schedule:
@@ -53,24 +53,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Change directory
-      run: cd smart_accounts
-
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '20'
 
     - name: PWD
-      working-directory: smart_accounts/safe
+      working-directory: v1/smart_accounts/safe
       run: pwd
 
     - name: Install dependencies
-      working-directory: smart_accounts/safe
+      working-directory: v1/smart_accounts/safe
       run: npm install
 
     - name: Run application
-      working-directory: smart_accounts/safe
+      working-directory: v1/smart_accounts/safe
       run: npm run start
 
 
@@ -88,8 +85,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Change directory
-      run: cd smart_accounts
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
@@ -97,19 +92,19 @@ jobs:
         node-version: '20'
 
     - name: PWD
-      working-directory: wallet
+      working-directory: v1/wallet
       run: pwd
 
     - name: Install dependencies
-      working-directory: wallet
+      working-directory: v1/wallet
       run: npm install
 
     - name: Run application
-      working-directory: wallet
+      working-directory: v1/wallet
       run: npm run build
 
     - name: Start web application
-      working-directory: wallet
+      working-directory: v1/wallet
       run: npm run start & # The '&' runs the command in the background
       # Give the server some time to start up before running tests
       # You might need to adjust this delay based on your application's startup time
@@ -117,7 +112,7 @@ jobs:
       run: sleep 10 # Wait for 10 seconds. Adjust as needed.
 
     - name: Run Tests
-      working-directory: wallet
+      working-directory: v1/wallet
       run: npx cypress run
 
     - name: Upload Cypress Artifacts
@@ -141,19 +136,19 @@ jobs:
       uses: actions/checkout@v3
 
     - name: PWD
-      working-directory: compass_agent
+      working-directory: v1/compass_agent
       run: pwd
 
     - name: Install uv
-      working-directory: compass_agent
+      working-directory: v1/compass_agent
       run: curl -LsSf https://astral.sh/uv/install.sh | sh
 
     - name: Run application
-      working-directory: compass_agent
+      working-directory: v1/compass_agent
       run: uv sync
 
     - name: Start web application
-      working-directory: compass_agent
+      working-directory: v1/compass_agent
       run: |
         .venv/bin/python agent.py
 
