--- a/.github/workflows/test_usecases_v0.yml
+++ b/.github/workflows/test_usecases_v0.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run example
         working-directory: v0/basic_examples/deposit_on_aave/python_example
         run:
-          ../venv/bin/python deposit_on_morpho.py
+          ./.venv/bin/python deposit_on_morpho.py
 
       - name: Install dependencies
         working-directory: v0/basic_examples/deposit_on_morpho/python_example
@@ -41,7 +41,7 @@ jobs:
       - name: Run example
         working-directory: v0/basic_examples/deposit_on_morpho/python_example
         run:
-          ../venv/bin/python deposit_on_morpho.py
+          ./.venv/bin/python deposit_on_morpho.py
 
 
 
