--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -235,13 +235,13 @@ jobs:
   #     run: |
   #       .venv/bin/python agent.py
 
-  failure_alert:
-    if: failure() && github.event_name == 'schedule' # Runs only if a previous job failed & triggered by cron
-    runs-on: ubuntu-latest
-    needs: [run-zero-dev, run-safe, run-wallet]
-    steps:
-      - name: Send failure notification
-        run: |
-          curl -X POST "https://allquiet.app/api/webhook/829f846c-4dfa-4a58-ab33-eafae34a57c9" \
-               -H "Content-Type: application/json" \
-               -d '{"status": "Open", "severity": "Critical", "message": "GitHub workflow failed", "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"}'
+#  failure_alert:
+#    if: failure() && github.event_name == 'schedule' # Runs only if a previous job failed & triggered by cron
+#    runs-on: ubuntu-latest
+#    needs: [run-zero-dev, run-safe, run-wallet]
+#    steps:
+#      - name: Send failure notification
+#        run: |
+#          curl -X POST "https://allquiet.app/api/webhook/829f846c-4dfa-4a58-ab33-eafae34a57c9" \
+#               -H "Content-Type: application/json" \
+#               -d '{"status": "Open", "severity": "Critical", "message": "GitHub workflow failed", "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"}'
