--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -5,6 +5,9 @@ on:
     # Runs at 00:00 UTC every day
     - cron: "0 0 * * *"
   # Allow manual triggering
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
