--- a/.github/workflows/test_tutorials_v1.yml
+++ b/.github/workflows/test_tutorials_v1.yml
@@ -51,8 +51,8 @@ jobs:
           WALLET_ADDRESS=$(cast wallet address --private-key ${{ secrets.PRIVATE_KEY }})
           echo "Funding wallet: $WALLET_ADDRESS"
 
-          # Set balance to 1,000,000 ETH (in wei: 1,000,000 * 10^18)
-          cast rpc anvil_setBalance $WALLET_ADDRESS 1000000000000000000000000 --rpc-url http://localhost:8546
+          # Set balance to 10,000 ETH (in wei: 10,000 * 10^18 = 0x9184e72a000000000000)
+          cast rpc anvil_setBalance $WALLET_ADDRESS 0x9184e72a000000000000 --rpc-url http://localhost:8546
           echo "Wallet funded with 1,000,000 ETH"
 
       - name: Verify Wallet Balance
